--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -1,56 +1,49 @@
 @charset "UTF-8";
 
-.row.content {
-	height: 1500px;
-}
 
-.sidenav {
-	background-color: #5bc0de;
-	height: 100%;
-}
+    .row.content {height: 1500px}
+    
+    .sidenav {
+      background-color: #5bc0de;
+      height: 100%;
+    }
 
-.span-font {
-	color: #999999;
-}
-
-.col-sm-4 {
-	width: 18%;
-}
-
-.container-fluid {
-	height: 100%;
-}
-
-.active_1  {
-	background-color: #ffffff;
-	border-radius: 4px;
-	    
-}
-
-.s_title  {
-	height: 30px;
-	    
-}
-
-@media screen and (max-width: 767px) {
-	.sidenav {
-		height: auto;
-		padding: 15px;
-	}
-	.row.content {
-		height: auto;
-	}
-}
-
-.container {
-	    margin-left: 0px;
-	    width: 100%;
-	    
-}
-
-footer {
-	background-color: #555;
-	color: white;
-	padding: 15px;
-}
-    
+    .active_1 {
+      background-color: #ffffff;
+      border-radius:4px;
+    }
+    
+    .s_title {
+      height:30px;
+    }
+    
+    .col-sm-4{
+    	width:18%;
+    }
+    
+    
+    footer {
+      background-color: #555;
+      color: white;
+      padding: 15px;
+    }
+    
+    @media screen and (max-width: 767px) {
+      .sidenav {
+        height: auto;
+        padding: 15px;
+      }
+      .row.content {height: auto;} 
+    }
+    
+    
+    .container{
+    	margin-left:0px;
+    	width:100%;
+    }
+    
+    .span-font{
+    	color:#999999;
+    }
+    
+ 
