--- a/src/main/webapp/resources/css/user.css
+++ b/src/main/webapp/resources/css/user.css
@@ -59,7 +59,7 @@
     .form-body{
     	margin-top:50px;
     	padding:7% 10% 7% 10%;
-    	height:400px;
+    	height:100%;
     	border: 4px solid #114a9b;
     }
     
