--- a/src/main/webapp/resources/css/user.css
+++ b/src/main/webapp/resources/css/user.css
@@ -1,91 +1,106 @@
 @charset "utf-8";
 
-    .row.content {
-    	height:100%;
-    	background-color:#fff;
-    }
-    
-	.content-header{
-    	margin-right:10%;
-    	margin-left:10%;
-    	margin-top:30px;
-    	margin-bottom:25px;
-    	padding-left:30px;
-    	padding-right:30px;
-    	padding-top:30px;
-    	padding-bottom:50px;
-    	background-color:#114a9b;
-    }
-    
-	.font{
-		color:#fff;
-		float:right;
-	}
-    
- 	.title {
-   		color:#fff;
-    }
+.row.content {
+	height: 100%;
+	background-color: #fff;
+}
 
-	.body-font{
-			color:#585352;
-			padding:20px;
-			margin-bottom:30px;
-		}
+.content-header {
+	margin-right: 10%;
+	margin-left: 10%;
+	margin-top: 30px;
+	margin-bottom: 25px;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-top: 30px;
+	padding-bottom: 50px;
+	background-color: #114a9b;
+}
 
-	.btn{
-	    width: 130px;
-	    height: 35px;
-	    padding: 6px 12px;
-	    font-size: 16px;
-	    line-height: 1.42857143;
-	    color: #555;
-	    background-color: #fff;
-	    border: 2px solid #ccc;
-	    border-radius: 4px;
-	    float:right;
-	 	margin-right:10px;
-	 	margin-bottom:30px;
-	}
+.font {
+	color: #fff;
+	float: right;
+}
+
+.title  {
+	color: #fff;
+	    
+}
+
+.body-font {
+	color: #585352;
+	padding: 20px;
+	margin-bottom: 30px;
+}
+
+.btn {
+	width: 130px;
+	height: 35px;
+	padding: 6px 12px;
+	font-size: 16px;
+	line-height: 1.42857143;
+	color: #555;
+	background-color: #fff;
+	border: 2px solid #ccc;
+	border-radius: 4px;
+	float: right;
+	margin-right: 10px;
+	margin-bottom: 30px;
+}
+
+.content-body {
+	margin-top: 50px;
+	margin-right: 10%;
+	margin-left: 10%;
+	height: 600px;
+}
+
+.form-body {
+	margin-top: 50px;
+	padding: 7% 10% 7% 10%;
+	height: 100%;
+	border: 4px solid #114a9b;
+}
+
+.form-control {
+	display: block;
+	width: 400px;
+	height: 50px;
+	padding: 6px 12px;
+	font-size: 20px;
+	line-height: 1.42857143;
+	color: #555;
+	background-color: #fff;
+	border: 2px solid #ccc;
+	border-radius: 4px;
+	margin-right: 30%;
+	margin-left: 30%;
+}
+
+.topbox {
+	border-top-left-radius: 7px;
+	border-top-right-radius: 7px;
+}
+
+input[type=radio] {
+	margin-right: 10px;
+}
+
+.footer {
+	background-color: #555;
+	color: white;
+	padding: 15px;
+}
 
 
-    .content-body{
-    	margin-top:50px;
-    	margin-right:10%;
-    	margin-left:10%;
-    	height:600px;
-    	
-    }
-    
-    .form-body{
-    	margin-top:50px;
-    	padding:7% 10% 7% 10%;
-    	height:100%;
-    	border: 4px solid #114a9b;
-    }
-    
-    
-	.form-control {
-	    display: block;
-	    width: 400px;
-	    height: 50px;
-	    padding: 6px 12px;
-	    font-size: 20px;
-	    line-height: 1.42857143;
-	    color: #555;
-	    background-color: #fff;
-	    border: 2px solid #ccc;
-	    border-radius:4px;
-	    margin-right:30%;
-	    margin-left:30%;
-	}
-	
+td, th {
+	text-align: center;
+}
 
-    
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
-    
-   
-    
+th {
+	background-color: #EEEEEE;
+}
+
+table {
+	border-color: #999999;
+}
