남채현 커밋

--- a/src/main/webapp/resources/css/user.css
+++ b/src/main/webapp/resources/css/user.css
@@ -86,11 +86,12 @@ input[type=radio] {
 	margin-right: 10px;
 }
 
-.footer {
-	background-color: #555;
-	color: white;
-	padding: 15px;
-}
+  footer {
+      background-color: #555;
+      color: white;
+      padding: 15px;
+    }
+    
 
 
 td, th {
